syntax = "proto3";
package service;

import weak "datamodel.proto";

message InfoNodeSlice {
    repeated InfoNode inodes = 1;
}

message AnalysisMessage {
    int64 token = 1;
    map<string, InfoNodeSlice> resultMap = 2;
}
  
message AnalysisResponse {
    bool success = 1;
}

message NodeRequest {
    string type = 1;
    string name = 2;
}

message NodeResponse {
    repeated FileNode fileNodes = 1;
}

message AnalyzerConfigRequest {
    int32 analyzerID = 1;
}

message AnalyzerConfigResponse {
    string typeSelector = 1;
    map<string, string> configMap = 2;
    repeated PathSubstitution pathSub = 3;
    int64 token = 4;
    string cacheDir = 5;
}

service AnalysisService {
    rpc GetNodes(NodeRequest) returns (NodeResponse) {}
    rpc SendNodes(AnalysisMessage) returns (AnalysisResponse) {}
    rpc GetAnalyzerConfig(AnalyzerConfigRequest) returns (AnalyzerConfigResponse) {}
}